--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mersenne-twister": "^1.1.0",
     "morgan": "~1.9.1",
     "pug": "^2.0.4",
+    "puppeteer": "^13.5.1",
     "uglify-js": "^2.6.0"
   }
 }
